--- a/fe/index.html
+++ b/fe/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <title>Hello, world!</title>
+    <title>Управление контурами</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 </head>
 <body>
@@ -53,16 +53,16 @@
             }, 300);
         },
         methods: {
-            close: async function (id) {
+            close: async function (circuitId) {
                 try {
-                    const data = await axios.get(`/close-circuit?id=${id}`);
+                    const data = await axios.post(`/close-circuit`, { circuitId });
                 } catch (e) {
                     console.log('Error while closing');
                 }
             },
-            open: async function (id) {
+            open: async function (circuitId) {
                 try {
-                    const data = await axios.get(`/open-circuit?id=${id}`);
+                    const data = await axios.post(`/open-circuit`, { circuitId });
                 } catch (e) {
                     console.log('Error while closing');
                 }
